# Cairn

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  index.html
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security.yml
core/: README.md  pyproject.toml
core/cairn_core/: __init__.py
core/cairn_core/policy/: __init__.py  errors.py  evaluate.py  schema.py
core/cairn_core/projects/: analysis.py  analyze.py  context.py  init.py  introspect.py  load.py
core/cairn_core/reporting/: __init__.py  build.py  emit.py  errors.py  schema.py
core/cairn_core/serialization/: __init__.py  errors.py  json.py
core/tests/: test_analyze_project_report.py  test_deterministic_json.py  test_policy_evaluate.py  test_project_analysis.py  test_project_init_validation.py  test_project_introspection.py  test_project_load.py  test_report_emission.py
desktop/: README.md
docs/: architecture.md  policy-schema.md  project-schema.md  roadmap.md  threat-model.md
docs/specs/: project-init.md  project-introspect.md  project-load.md
