[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cairn-core"
version = "0.1.0"
description = "Core engine for the Cairn local-first developer workbench"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Cairn Contributors" }
]

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development",
  "Topic :: Security"
]

dependencies = [
  "pyyaml>=6.0",
  "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.1.6",
  "black>=23.9",
  "mypy>=1.6",
]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.py$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "I"]
ignore = []
exclude = [
  ".git",
  ".venv",
  "build",
  "dist"
]

[tool.ruff.isort]
known-first-party = ["cairn_core"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
exclude = "(build|dist)"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]
